# CGame

./: CGame.sln  CGame.vcxproj  CGame.vcxproj.filters  CMakeLists.txt  filestream.h  main.c  map.txt
include/: filestream.h  map_handler.h  player_handler.h  string_helper.h
src/: filestream.c  main.c  map_handler.c  player_handler.c  string_helper.c
